[package]
name = "hyperlane-cosmos-rs"
version = "0.1.0"
authors = ["Jamin Yeates <jamin@hyperlane.xyz>"]
repository = "https://github.com/bcp-innovations/hyperlane-cosmos-rs"
description = "Protobuf stuct defintions for interacting with the Hyperlane Cosmos SDK"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies", "database"]
keywords = ["hyperlane", "blockchain", "cosmos", "tendermint", "proto"]
edition = "2021"
rust-version = "1.72"
license-file = "LICENSE"

[dependencies]
prost = { version = "0.13", default-features = false }
tendermint-proto = { version = "0.40.0" }
cosmrs = { version = "0.21.0", default-features = false, features = ["grpc"] }

# Optional dependencies
tonic = { version = "0.12", optional = false, default-features = true, features = [
    "codegen",
    "prost",
] }
serde = { version = "1.0.203", optional = false, default-features = true, features = [
    "alloc",
] }
