[package]
name = "hyperlane-cosmos-dymension-rs"
version = "0.1.4-dymension-v3.2.1"
authors = ["Jamin Yeates <jamin@hyperlane.xyz>"]
repository = "https://github.com/dymensionxyz/hyperlane-cosmos-rs"
description = "Protobuf definitions for Hyperlane Cosmos SDK and Dymension's x/kas module"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies", "database"]
keywords = ["hyperlane", "blockchain", "cosmos", "proto", "dymension"]
edition = "2021"
rust-version = "1.72"
license-file = "LICENSE"

[dependencies]
prost = { version = "0.13", default-features = false }
tendermint-proto = { version = "0.40.0" }
cosmrs = { version = "0.21.0", default-features = false, features = ["grpc"] }

# Optional dependencies
tonic = { version = "0.12", optional = false, default-features = true, features = [
    "codegen",
    "prost",
] }
serde = { version = "1.0.203", optional = false, default-features = true, features = [
    "alloc",
] }
